kong-ingress-controller-multi-service/mitigitation/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gateway-private-common-teams
  namespace: private-gateway-http
spec:
  gatewayClassName: kong-class-multi
  listeners:
  - name: http-private-common
    # hostname: "*.tajawal-dev.internal"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  addresses:
    - type: Hostname
      value: internal-kong-multi-internal-gateway-943885759.eu-west-1.elb.amazonaws.com
